Start well-known URL support Update dependencies Use Rust version 1.45.2 for CI steps
